// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`handles pure summer break 1`] = `
{
  "block": null,
  "day": null,
  "event": {
    "end": 2023-08-28T14:00:00.000Z,
    "name": "Summer Break",
    "start": 2023-05-10T20:00:00.000Z,
  },
  "is_weekend": false,
  "week": null,
}
`;

exports[`handles not pure summer break 1`] = `
{
  "block": {
    "block": 9,
    "end": 2023-06-29T20:00:00.000Z,
    "start": 2023-06-05T14:00:00.000Z,
  },
  "day": 15,
  "event": {
    "end": 2023-08-28T14:00:00.000Z,
    "name": "Summer Break",
    "start": 2023-05-10T20:00:00.000Z,
  },
  "is_weekend": true,
  "week": 3,
}
`;

exports[`handles block breaks 1`] = `
{
  "block": null,
  "day": null,
  "event": {
    "end": 2023-02-13T15:00:00.000Z,
    "name": "Block Break",
    "start": 2023-02-08T21:00:00.000Z,
  },
  "is_weekend": false,
  "school_year": "2022-2023",
  "week": null,
}
`;

exports[`handles actual blocks 1`] = `
{
  "block": {
    "block": 6,
    "end": 2023-03-08T18:00:00.000Z,
    "start": 2023-02-13T15:00:00.000Z,
  },
  "day": 14,
  "event": null,
  "is_weekend": false,
  "school_year": "2022-2023",
  "week": 3,
}
`;

exports[`handles breaks in blocks 1`] = `
{
  "block": {
    "block": 4,
    "end": 2024-12-18T18:00:00.000Z,
    "start": 2024-11-18T15:00:00.000Z,
  },
  "day": null,
  "event": {
    "end": 2024-11-30T06:00:00.000Z,
    "name": "Fall Break",
    "start": 2024-11-25T06:00:00.000Z,
  },
  "is_weekend": false,
  "school_year": "2024-2025",
  "week": null,
}
`;

exports[`handles breaks in blocks on return 1`] = `
{
  "block": {
    "block": 4,
    "end": 2024-12-18T18:00:00.000Z,
    "start": 2024-11-18T15:00:00.000Z,
  },
  "day": 6,
  "event": null,
  "is_weekend": false,
  "school_year": "2024-2025",
  "week": 2,
}
`;

exports[`handles breaks in blocks on return 2`] = `
{
  "block": {
    "block": 4,
    "end": 2024-12-18T18:00:00.000Z,
    "start": 2024-11-18T15:00:00.000Z,
  },
  "day": 10,
  "event": null,
  "is_weekend": true,
  "school_year": "2024-2025",
  "week": 2,
}
`;

exports[`handles pure breaks 1`] = `
{
  "block": null,
  "day": null,
  "event": {
    "end": 2024-01-14T15:00:00.000Z,
    "name": "Winter Break",
    "start": 2023-12-21T15:00:00.000Z,
  },
  "is_weekend": false,
  "school_year": "2023-2024",
  "week": null,
}
`;

exports[`handles weekends 1`] = `
{
  "block": {
    "block": 3,
    "end": 2024-11-13T18:00:00.000Z,
    "start": 2024-10-21T14:00:00.000Z,
  },
  "day": 10,
  "event": null,
  "is_weekend": true,
  "school_year": "2024-2025",
  "week": 2,
}
`;
